@@ -214,6 +214,18 @@
   doi		= {10.1109/DepCoS-RELCOMEX.2009.31}
 }
 
+@InProceedings{	cimatti.06.fmcad,
+  author	= {Cimatti, Alessandro and Roveri, Marco and Semprini, Simone and
+		  Tonetta, Stefano},
+  title	= {From {PSL} to {NBA}: a Modular Symbolic Encoding},
+  booktitle	= {Proceedings of the 6th conference on Formal Methods in Computer
+		  Aided Design (FMCAD'06)},
+  pages	= {125--133},
+  year		= {2006},
+  publisher	= {IEEE Computer Society},
+  doi		= {10.1109/FMCAD.2006.19}
+}
+
 @Article{	  cimatti.08.tcad,
   author	= {Alessandro Cimatti and Marco Roveri and Stefano Tonetta},
   journal	= {IEEE Transactions on Computer Aided Design of Integrated
